packages/astro/e2e/fixtures/errors/src/pages/import-not-found.astro
---
import Fake from '../abc.astro';
---
<h1>Testing unresolved frontmatter import</h1>
<Fake />
